--- a/qmd/partials/_upset_plot.qmd
+++ b/qmd/partials/_upset_plot.qmd
@@ -1,33 +1,39 @@
----
-title: "upset_plot_code"
-format:
-  html:
-    theme: default
----
+
 
 ```{r}
-###0. Prepare Packages###
-
-# install.packages(c("readr","dplyr","tidyr","ggplot2","cowplot","here"))
-
+#| fig-width: 13
+#| fig-height: 24
+#| out-width: 100% 
+#| fig-align: center 
+#| fig-format: svg
+### 0) Packages & paths
 library(readr)
 library(dplyr)
 library(tidyr)
 library(ggplot2)
 library(cowplot)
 library(here)
-fig_dir <- here::here("figures")       
-if (!dir.exists(fig_dir)) dir.create(fig_dir)
 
-###1. Prepare data###
-df <- read_csv("../data_raw/phes_ef_all_concept_long_workbook.csv") %>%
-  filter(
+data_fp <- here::here("data_raw", "phes_ef_all_concept_long_workbook.csv")
+fig_dir <- here::here("figures")
+if (!dir.exists(fig_dir)) dir.create(fig_dir, recursive = TRUE)
+
+### 1) Data
+df <- readr::read_csv(
+  data_fp,
+  show_col_types = FALSE,
+  col_types = readr::cols(.default = readr::col_character()) 
+) %>%
+  dplyr::mutate(
+    year = suppressWarnings(readr::parse_number(year))  
+  ) %>%
+  dplyr::filter(
     !scr_term %in% c("missing", "FALSE"),
     !is.na(scr_term)
-    ) %>%
-  mutate(year = as.numeric(year))
+  )
 
-###2. set the chronical order for the data###
+
+### 2) Chronological order
 term_years <- df %>%
   group_by(scr_term) %>%
   summarise(first_year = min(year, na.rm = TRUE), .groups = "drop") %>%
@@ -46,7 +52,8 @@ df <- df %>%
     scr_term = factor(scr_term, levels = terms_order, ordered = TRUE),
     study_id = factor(study_id, levels = study_order, ordered = TRUE)
   )
-###3. term count###
+
+### 3) Term counts (for bar chart)
 term_counts <- tibble(scr_term = terms_order) %>%
   left_join(count(df, scr_term, name = "count"), by = "scr_term") %>%
   mutate(count = coalesce(count, 0)) %>%
@@ -54,78 +61,66 @@ term_counts <- tibble(scr_term = terms_order) %>%
 
 max_count <- max(term_counts$count)
 
-###4. Bar plot###
+### 4) Bar plot
 bar_plot <- ggplot(term_counts,
-                   aes(x = factor(scr_term, levels = terms_order),
-                       y = count)) +
+                   aes(x = factor(scr_term, levels = terms_order), y = count)) +
   geom_col(width = 1, fill = "#2B83BA") +
   geom_text(aes(label = count), vjust = -0.35, size = 3) +
-  labs(x = NULL,
-       y = "Number of studies\nassessing each concept") +
-  theme_minimal(base_size = 11) +
+  labs(x = NULL, y = "Number of studies\nassessing each concept") +
+  theme_minimal(base_size = 14) +
   theme(
-    axis.text.x  = element_text(angle = 90, vjust = 0.5, hjust = 1, size = 8),
+    axis.text.x  = element_text(angle = 90, vjust = 0.5, hjust = 1, size = 8.5, lineheight = 0.95),
+    axis.text.y  = element_text(size = 10),
     axis.ticks.x = element_blank(),
     panel.grid   = element_blank(),
     panel.border = element_blank(),
     axis.line    = element_blank(),
     axis.title.y = element_text(margin = margin(r = 0)),
-    plot.margin  = margin(12, 10, 24, 10)
+    plot.margin  = margin(6, 10, 6, 10)
   ) +
   coord_cartesian(ylim = c(0, max_count * 1.25), clip = "off") +
   scale_x_discrete(limits = terms_order, drop = FALSE, expand = c(0, 0))
 
-###5. heatmap ###
+### 5) Heatmap matrix
 heatmap_data <- df %>%
   mutate(study_id = factor(study_id, levels = study_order, ordered = TRUE),
-    scr_term = factor(scr_term, levels = terms_order, ordered = TRUE)
-  ) %>%
+         scr_term = factor(scr_term, levels = terms_order, ordered = TRUE)) %>%
   distinct(study_id, scr_term) %>%
   mutate(value = 1) %>%
   tidyr::complete(study_id, scr_term, fill = list(value = 0))
 
 heatmap_plot <- ggplot(heatmap_data,
-                       aes(x = scr_term,
-                           y = study_id,
-                           fill = value)) +
+                       aes(x = scr_term, y = study_id, fill = value)) +
   geom_tile(color = "grey90") +
   scale_fill_gradient(low = "white", high = "#2B83BA") +
   scale_x_discrete(limits = terms_order, drop = FALSE, expand = c(0, 0)) +
-  scale_y_discrete(limits = rev(study_order),   ### make sure it's chronical
-                   expand = c(0.04, 0)) +
+  scale_y_discrete(limits = rev(study_order), expand = c(0.04, 0)) +
   labs(x = NULL, y = NULL) +
-  theme_minimal(base_size = 11) +
+  theme_minimal(base_size = 14) +
   theme(
     legend.position   = "none",
     axis.text.x       = element_blank(),
     axis.ticks        = element_blank(),
-    axis.text.y       = element_text(size = 8, lineheight = 1.15),
+    axis.text.y       = element_text(size = 9, lineheight = 1.15),
     panel.grid        = element_blank(),
     panel.border      = element_blank(),
     axis.line         = element_blank(),
     plot.margin       = margin(2, 10, 12, 10)
   )
 
-###6. combine bargraph and heatmap###
-aligned <- cowplot::align_plots(bar_plot, heatmap_plot,
-                                align = "v", axis = "lr")
-
+### 6) Combine
+aligned <- cowplot::align_plots(bar_plot, heatmap_plot, align = "v", axis = "lr")
 combined_plot <- cowplot::plot_grid(
-  cowplot::ggdraw() +
-    cowplot::draw_label("Figure. XXXXX",
-                        fontface = "bold", size = 14, hjust = 0.5),
-  # combine
-  cowplot::plot_grid(aligned[[1]], aligned[[2]],
-                     ncol = 1, rel_heights = c(3, 5)),
-  ncol = 1,
-  rel_heights = c(0.08, 1)
+  cowplot::ggdraw() + cowplot::draw_label("Figure. XXXXX", fontface = "bold", size = 16, hjust = 0.5),
+  cowplot::plot_grid(aligned[[1]], aligned[[2]], ncol = 1, rel_heights = c(4.2,5.8)),
+  ncol = 1, rel_heights = c(0.09, 1)
 )
 
-###7. save the figure###
-ggsave(
-  filename = file.path(fig_dir, "upset_bar_heatmap.pdf"), 
-  plot = combined_plot,
-  width = 24, height = 13, units = "in", dpi = 300)
+### 7) Show & save
+combined_plot
+
+ggsave(file.path(fig_dir, "upset_plot.png"), combined_plot,
+       width = 24, height = 13, units = "in", dpi = 300)
 
 ```
 
