--- a/qmd/partials/_upset_plot.qmd
+++ b/qmd/partials/_upset_plot.qmd
@@ -2,7 +2,7 @@
 
 ```{r}
 #| fig-width: 13
-#| fig-height: 24
+#| fig-height: 18
 #| out-width: 100% 
 #| fig-align: center 
 #| fig-format: svg
@@ -21,16 +21,13 @@ if (!dir.exists(fig_dir)) dir.create(fig_dir, recursive = TRUE)
 ### 1) Data
 df <- readr::read_csv(
   data_fp,
-  show_col_types = FALSE,
-  col_types = readr::cols(.default = readr::col_character()) 
+  show_col_types = FALSE
 ) %>%
-  dplyr::mutate(
-    year = suppressWarnings(readr::parse_number(year))  
-  ) %>%
   dplyr::filter(
     !scr_term %in% c("missing", "FALSE"),
     !is.na(scr_term)
-  )
+  ) %>%
+  dplyr::mutate(year = as.numeric(year))
 
 
 ### 2) Chronological order
