Update dictionary to use term_label in heading and term_name as ID
- Change heading to display term_label instead of term_name
- Move term_name to ID field (replacing obo_id)
- Remove Label field from dictionary entries

--- a/dictionary_documentation.qmd
+++ b/dictionary_documentation.qmd
@@ -129,7 +129,7 @@ slug <- function(x) {
 }
 d <- d %>%
   mutate(
-    header = if_else(!is_na_like(term_name), term_name, term_label),
+    header = if_else(!is_na_like(term_label), term_label, term_name),
     anchor = slug(header)
   )
 
@@ -171,8 +171,7 @@ purrr::pwalk(
 ## {header} {{#{anchor}}}
 
 
-**ID:** {obo_id}
-**Label:** {term_label}
+**ID:** {term_name}
 **See also:** {see_also_render}
 
 **Definition**
